--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body style="margin: 0">
 <script defer src="/phaser.js"></script>
 <script defer src="/game.js"></script>
 </body>
