--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body style="margin: 0">
-<script defer src="/phaser.js"></script>
-<script defer src="/game.js"></script>
+<script defer src="phaser.js"></script>
+<script defer src="game.js"></script>
 </body>
 </html>
 
